clusters/cl01tl/manifests/stalwart/HTTPRoute-stalwart.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: stalwart
  labels:
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stalwart
    helm.sh/chart: stalwart-4.6.2
  namespace: stalwart
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "stalwart.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: stalwart
          namespace: stalwart
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
